k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculadora
  namespace: calculadora
spec:
  selector:
    matchLabels:
      app: calculadora
  template:
    metadata:
      labels:
        app: calculadora
    spec:
      containers:
      - name: calculadora
        image: felipejm91/calculadora-flask-python
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
