k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculadora-service
  namespace: ns-calculadora
spec:
  selector:
    app: calculadora
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort
