k8s/ingressroute-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: calculadora 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: calc.felipemeneguetti.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: calculadora-service
              port: 
                number: 80
