k8s/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`calc.felipemeneguetti.com.br`)
    kind: Rule
    services:
    - kind: Service
      name: calculadora-service
      port: 80
